dist/core/src/test/baseman/invalid-usage/case-param-position-1/commands/d.d.ts
import { Command } from '../../../../..';
export default class  extends Command {
    execute(foo: string, oops: number, bar: string[]): void;
}
